# cli

./: CLI_NON_INTERACTIVE_RESEARCH.md  LICENSE.md  README.md  package-lock.json  package.json
demos/memo/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  KNOWLEDGE.md  README.md  facts.csv  package-lock.json  package.json  pyproject.toml  sm2.js  tessl.json
demos/memo/.claude/: settings.json
demos/memo/.tessl/: .gitignore
demos/memo/.tessl/framework/: agents.md  bootstrap.md  plan-files.md  tessl-system-prompt.md
demos/memo/.tessl/framework/docs/: spec-driven-development.md  spec-format.md
demos/memo/memo/: __init__.py  cli.py  db.py  mcp_server.py  quiz.py  srs.py
demos/memo/plans/: 2025-09-14_00-00-00_mcp-server-module.plan.md  2025-09-14_00-00-00_refactor-quiz-module.plan.md  2025-09-14_09-18-10_memo-cli-quiz-tool.plan.md  2025-09-14_implement-missing-functionality.plan.md
demos/memo/specs/: cli.spec.md  db.spec.md  mcp_server.spec.md  quiz.spec.md  srs.spec.md
demos/memo/tests/: test_create_card.py  test_db_init.py  test_get_all_cards.py  test_get_card.py  test_get_due_cards.py  test_import_from_csv.py  test_update_card.py
docs/: github-copilot-cli.md
src/: index.ts  types.ts
src/api/: client.ts  config.ts
src/commands/: eval.ts  skill.ts
src/commands/eval/: list.ts
src/commands/skill/: review.ts
src/utils/: table.ts
