[project]
name = "memo"
version = "0.1.0"
description = "A simple CLI quiz tool"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "fastmcp>=2.12.3",
]

[project.scripts]
memo = "memo.cli:app"

[tool.uv]
package = true

[tool.setuptools]
packages = ["memo"]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
